--- a/frontend/static/less/Color.less
+++ b/frontend/static/less/Color.less
@@ -1,4 +1,4 @@
-@primary-color: #1890ff;
+@primary-color: #669802;
 /* stylelint-disable at-rule-empty-line-before,at-rule-name-space-after,at-rule-no-unknown */
 /* stylelint-disable no-duplicate-selectors */
 /* stylelint-disable */
@@ -1375,7 +1375,7 @@ this.tinycolor = tinycolor;
 @blue-3: color(~`colorPalette("@{blue-6}", 3)`);
 @blue-4: color(~`colorPalette("@{blue-6}", 4)`);
 @blue-5: color(~`colorPalette("@{blue-6}", 5)`);
-@blue-6: #1890ff;
+@blue-6: #669802;
 @blue-7: color(~`colorPalette("@{blue-6}", 7)`);
 @blue-8: color(~`colorPalette("@{blue-6}", 8)`);
 @blue-9: color(~`colorPalette("@{blue-6}", 9)`);
@@ -5089,7 +5089,7 @@ form .ant-upload {
 }
 .ant-layout {
   //background: #f0f2f5;
-  background-color: #b6daf5;
+  background-color: #e9f8e7;
 }
 .ant-layout-header {
   background: #001529;
